@@ -51,10 +51,14 @@ EOF
 }
 
 {
+
     my $code = 'now in a code block
     preserve the formatting';
+    my @text;
 
-    my $text = <<"EOF";
+    #  Code block as per GitHub standard
+    #
+    push @text, <<"EOF";
 Some plain text.
 
 ```Perl
@@ -63,34 +67,80 @@ $code
 
 More plain text.
 EOF
+    #  End code block
 
-    my $expect = [
-        { type => 'paragraph' },
-        [
-            {
-                type => 'text',
-                text => "Some plain text.\n",
-            },
-        ], {
-            type     => 'code_block',
-            code     => $code,
-            language => 'Perl',
-        },
-        { type => 'paragraph' },
-        [
-            {
-                type => 'text',
-                text => "More plain text.\n",
-            },
-        ],
-    ];
 
-    parse_ok(
-        { dialects => 'GitHub' },
-        $text,
-        $expect,
-        'fenced code block with language indicator'
-    );
+    #  Code block as per Pandoc v1.12.3.3
+    #
+    push @text, <<"EOF";
+Some plain text.
+
+``` {.Perl}
+$code
+```
+
+More plain text.
+EOF
+    #  End code block
+
+
+    #  Code block as per Pandoc v1.13.2
+    #
+    push @text, <<"EOF";
+Some plain text.
+
+``` Perl
+$code
+```
+
+More plain text.
+EOF
+    #  End code block
+
+
+    #  Code block with trailing space after Perl language declaration
+    #
+    push @text, <<"EOF";
+Some plain text.
+
+``` Perl 
+$code
+```
+
+More plain text.
+EOF
+    #  End code block
+
+    foreach my $text (@text) {
+
+        my $expect = [
+            { type => 'paragraph' },
+            [
+                {
+                    type => 'text',
+                    text => "Some plain text.\n",
+                },
+            ], {
+                type     => 'code_block',
+                code     => $code,
+                language => 'Perl',
+            },
+            { type => 'paragraph' },
+            [
+                {
+                    type => 'text',
+                    text => "More plain text.\n",
+                },
+            ],
+        ];
+
+        parse_ok(
+            { dialects => 'GitHub' },
+            $text,
+            $expect,
+            'fenced code block with language indicator'
+        );
+    }
 }
 
 done_testing();
