@@ -4,6 +4,10 @@
   "&lt;word&gt;" would be parsed a sigle eneity, "lt;word&gt", which is
   clearly wrong. Fixed by Polina Shubina. GitHub PR #3.
 
+- Accept Pandoc (1.12.3)-generated GitHub-format Markdown document style for
+  fenced code blocks - "``` {.Perl}". Implemented by Andrew Speer. GitHub PR
+  #4.
+
 
 0.25   2015-01-04
 
